--- a/src/main/resources/fxml/chartChoiceSelection.fxml
+++ b/src/main/resources/fxml/chartChoiceSelection.fxml
@@ -8,7 +8,7 @@
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.scalaFX.FXControllers.ChartChoiceController">
    <VBox layoutX="422.0" layoutY="-43.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
          AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <Label text="Scegli il grafico da visualizzare" textAlignment="LEFT" textOverrun="CENTER_ELLIPSIS"
+      <Label text="Scegli il grafico da visualizzare" textOverrun="CENTER_ELLIPSIS"
              wrapText="true">
          <padding>
             <Insets bottom="5.0" left="10.0" right="10.0" top="5.0"/>
@@ -55,7 +55,7 @@
          <padding>
             <Insets bottom="5.0" left="10.0" right="10.0" top="5.0"/>
          </padding>
-         <Label text="Legenda" textAlignment="LEFT" wrapText="true">
+         <Label text="Legenda" wrapText="true">
             <padding>
                <Insets bottom="5.0"/>
             </padding>
