--- a/src/main/resources/fxml/baseApp.fxml
+++ b/src/main/resources/fxml/baseApp.fxml
@@ -201,10 +201,23 @@
                               <Insets bottom="10.0" />
                            </GridPane.margin>
                         </AnchorPane>
+                                <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="6">
+                                    <children>
+                                        <Button fx:id="speedButton" maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" onAction="#addSpeedUp" prefHeight="60.0" prefWidth="60.0" styleClass="speedup-button" text="2x">
+                                            <HBox.margin>
+                                                <Insets bottom="30.0" left="10.0" right="10.0" top="10.0" />
+                                            </HBox.margin>
+                                            <font>
+                                                <Font name="System Bold" size="18.0" />
+                                            </font>
+                                        </Button>
+                                    </children>
+                                </HBox>
+                        <AnchorPane fx:id="clock" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
                             </children>
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin>
+                            <GridPane.margin>
+                                <Insets />
+                            </GridPane.margin>
                         </GridPane>
                     </children>
                 </GridPane>
