--- a/src/main/resources/fxml/baseApp.fxml
+++ b/src/main/resources/fxml/baseApp.fxml
@@ -168,13 +168,18 @@
                         </VBox>
                     </GridPane>
                 </AnchorPane>
-                <HBox alignment="CENTER_RIGHT" pickOnBounds="false" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="6">
-                    <Button fx:id="speedButton" maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" onAction="#changeSimulationSpeed" prefHeight="60.0" prefWidth="60.0" text="2x">
+                <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="6">
+               <Label fx:id="speedLabel" text="Speed: 1x" textAlignment="CENTER">
+                  <font>
+                     <Font name="System Bold" size="12.0" />
+                  </font>
+               </Label>
+                    <Button fx:id="speedButton" maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" onAction="#changeSimulationSpeed" prefHeight="60.0" prefWidth="60.0" text="&gt;&gt;">
                         <HBox.margin>
                             <Insets bottom="30.0" left="10.0" right="10.0" top="10.0" />
                         </HBox.margin>
                         <font>
-                            <Font name="System Bold" size="18.0" />
+                            <Font name="System Bold Italic" size="18.0" />
                         </font>
                         <styleClass>
                             <String fx:value="speedup-button" />
@@ -183,14 +188,6 @@
                     </Button>
                 </HBox>
                 <AnchorPane fx:id="clock" prefHeight="200.0" prefWidth="200.0" />
-            <Label fx:id="speedLabel" text="Speed: 1x" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="5">
-               <GridPane.margin>
-                  <Insets left="180.0" />
-               </GridPane.margin>
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
             </GridPane>
         </GridPane>
         <GridPane GridPane.columnIndex="1">
